test_regress/t/t_wire_self_bad.out
%Error: t/t_wire_self_bad.v:11:16: Wire inputs its own output, creating circular logic (wire x=x)
   11 |    wire myself = myself;
      |                ^
%Error: Exiting due to
